sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: not found: value getnombrevaleurs
for(i<- getnombrevaleurs()-2 to 0 by -1)
        ^